# abb_gofa_battery

./: .gitignore  ABB_GoFa_BatteryInspection_QuickRef.md  ABB_GoFa_BatteryInspection_System_Report.md  README.md  ROS2_架构与轨迹规划详解.md  analyze_assembly_detailed.py  analyze_assembly_transforms.py  analyze_joint_axes.py  analyze_joint_connections.py  analyze_meshes.py  analyze_new_meshes.py  check_mesh_orientations.py  compute_joint_origin_xyz.py  compute_joint_transforms.py  compute_rpy_from_geometry.py  convert_step_to_stl.py  export_gofa.py  export_gofa_links.py  export_gofa_macro.py  freecad_batch.py  list_assembly_objects.py
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_crb15000_10_152_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_crb15000_10_152_moveit_config/config/: gofa_crb15000_10_152.mujoco.urdf.xacro  gofa_crb15000_10_152.srdf  gofa_crb15000_10_152.urdf.xacro  initial_positions.yaml  joint_limits.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_crb15000_10_152_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  mujoco_demo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_crb15000_support/: CMakeLists.txt  package.xml
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_crb15000_support/launch/: load_gofa_crb15000_10_152.launch  test_gofa_crb15000_10_152.launch
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_crb15000_support/tests/: roslaunch_test_gofa_crb15000_10_152.xml
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_support/: CMakeLists.txt  package.xml
src/abb_omnicore_ros2/robot_specific_config/abb_gofa_support/urdf/: gofa_crb15000.ros2_control.xacro  gofa_crb15000_10_152.xacro  gofa_crb15000_10_152_macro.xacro
src/abb_vision/: CMakeLists.txt  package.xml
src/abb_vision/config/: d415_camera_info.yaml.template  d455_camera_info.yaml.template
src/abb_vision/launch/: battery_alignment_controller.launch.py  battery_detector.launch.py  battery_pose_estimator.launch.py  cscan_trajectory_generator.launch.py  cscan_udp_bridge.launch.py  cscan_visualizer.launch.py  hand_eye_calibrator.launch.py  mock_data.launch.py
src/abb_vision/msg/: CscanStatus.msg
src/abb_vision/scripts/: mock_data_node.py
src/abb_vision/src/: battery_alignment_controller.cpp  battery_detector.cpp  battery_pose_estimator.cpp  cscan_trajectory_generator.cpp  cscan_udp_bridge.cpp  cscan_visualizer.cpp  hand_eye_calibrator.cpp
src/abb_vision/test/: test_aruco_calibration.py  test_battery_detector.py
src/abb_vision/yolo_training/: README.md
src/abb_vision/yolo_training/datasets/: battery_dataset.yaml
src/abb_vision/yolo_training/datasets/battery/labels/train/: battery_0000.txt  battery_0001.txt  battery_0002.txt  battery_0003.txt  battery_0004.txt  battery_0005.txt  battery_0006.txt  battery_0007.txt  battery_0008.txt  battery_0009.txt
src/abb_vision/yolo_training/datasets/battery/labels/val/: battery_0000.txt  battery_0001.txt  battery_0002.txt  battery_0003.txt  battery_0004.txt
src/abb_vision/yolo_training/datasets/retort_pouch/: README.dataset.txt  README.roboflow.txt  data.yaml
src/abb_vision/yolo_training/datasets/retort_pouch/test/labels/: _016_jpg.rf.e032360bf069e82f798fc100caf470f5.txt  _023_jpg.rf.78d4f535b582bc7db7d0ff88eb04a4b3.txt  kkm_006_jpg.rf.0b2fb526fd2dbe75c36546dab348f2fe.txt  kkm_021_jpg.rf.29866ad41107b111122c8008a6447ffe.txt  kkm_031_jpg.rf.29164db7a234dfd840afd210fa7d08c1.txt  kkm_038_jpg.rf.e9a87fa286d909295a24a363b1eb6180.txt  vvbg_001_jpg.rf.dcb468402b2136b5defac85e239eb316.txt
src/abb_vision/yolo_training/datasets/retort_pouch/train/: labels.cache
src/abb_vision/yolo_training/datasets/retort_pouch/train/labels/: _001_jpg.rf.7439f93489a2069e998729a9d7cf2625.txt  _002_jpg.rf.a7c57ac68dff3bc7752989129808e00d.txt  _003_jpg.rf.7ba0e8c6cd9b418bc2e5f7ff18c2d859.txt  _005_jpg.rf.0b5bbf65afff364bdea0d3000dd31d63.txt  _006_jpg.rf.623f7350983c21f45ba39694722f102a.txt  _007_jpg.rf.dc28fb98e6697ea44354f99eaf715d29.txt  _008_jpg.rf.bacae93fafd1be7ee5458b772ff4a7a3.txt  _010_jpg.rf.35a19896afd5e1afa11a1e392061f532.txt  _011_jpg.rf.4a443185e33b192867c664e1246df3ee.txt  _013_jpg.rf.ccbea3b84d3cba76dfbdea2f9e9e0897.txt  _017_jpg.rf.39d07fb8f480d57a675b46388ee7f909.txt  _018_jpg.rf.ff8498c26c6afb42d290178aac4746e6.txt  _019_jpg.rf.47b5c94ef5fd028c5a412a7385557cf2.txt  _020_jpg.rf.78c5579a2d343778917dc36998a0dd46.txt  _021_jpg.rf.7e2a0eef60ba5b765473a919e2fa601f.txt  _024_jpg.rf.b0e556e70ca7bc92c47adecaa8e7274f.txt  (+37 more)
src/abb_vision/yolo_training/datasets/retort_pouch/valid/: labels.cache
src/abb_vision/yolo_training/yolov13/: README.md
src/abb_vision/yolo_training/yolov13/datasets/: battery_dataset.yaml
src/abb_vision/yolo_training/yolov13/scripts/: create_synthetic_data.py  train_yolo13.py  verify_detection.py
src/abb_vision/yolo_training/yolov8/: README.md
src/abb_vision/yolo_training/yolov8/datasets/: battery_dataset.yaml  retort_pouch.yaml
src/abb_vision/yolo_training/yolov8/scripts/: train_yolov8.py  verify_detection.py
src/quintic_trajectory_planner/: MUJOCO_LOG.TXT  mujoco_simulation_no_viewer.py  mujoco_visualization.py  package.xml  setup.cfg  setup.py  test_mujoco_ros2_control.py  test_mujoco_trajectory.py
src/quintic_trajectory_planner/config/: ros2_controllers.yaml
src/quintic_trajectory_planner/config/gofa_crb15000_10_152_mujoco.xml/: mujoco_description.xml  mujoco_description_formatted.xml  robot_description_formatted.urdf
src/quintic_trajectory_planner/config/gofa_crb15000_10_152_mujoco.xml/assets/full/: mtl_base_link  mtl_link_1  mtl_link_2  mtl_link_3  mtl_link_4  mtl_link_5  mtl_link_6
src/quintic_trajectory_planner/launch/: mujoco_simulation.launch.py
src/quintic_trajectory_planner/quintic_trajectory_planner/: __init__.py  quintic_trajectory_planner.py  rviz_mujoco_bridge.py  trajectory_node.py
(+121 files in other folders)
