<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quintic_trajectory_planner</name>
  <version>0.0.0</version>
  <description>Quintic Polynomial Trajectory Planner for ABB GoFa CRB15000
  使用五次多项式进行关节空间轨迹规划，生成平滑的位置、速度、加速度连续轨迹</description>
  <maintainer email="i@todo.todo">i</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>abb_gofa_crb15000_10_152_moveit_config</depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
